# hSim

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  hsim.yml
cmake/: defaults.cmake
include/: config.hh  elf_loader.hh  machine.hh  memory.hh  support.hh
scripts/: CMakeLists.txt  codegen.rb
src/: elf_loader.cc  machine.cc  main.cc  memory.cc
